# Dusk

./: .gclient  .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  DEPS  README.md
.github/workflows/: build.yml  deploy_pages.yml
docs/: .gitignore  .ruby-gemset  00_setup.md.html  01_instance_adapter_and_device_info.md.html  404.html  Gemfile  _config.yaml  index.html  index.md  index.md.html
docs/_examples/: adapter_and_device_information.md
docs/_includes/: anchor_links.html  c_nav.html  cpp_nav.html  sidebar.html
docs/_layouts/: default.html
docs/_sass/: main.scss
docs/api/: c.md  cpp.md  create_instance.md  index.md  instance.md
docs/assets/css/: style.scss
scripts/: api_doc_generator.rb
src/: CMakeLists.txt  api.yaml
src/common/: CMakeLists.txt  callback.cc  callback.h  expected.h  glfw.h  log.cc  log.h  mat4.cc  mat4.h  vec3.h  webgpu_helpers.cc  webgpu_helpers.h  wgpu.h
src/example_01/: CMakeLists.txt  README.md  dump_utils.cc  dump_utils.h  main.cc  wgpu.h
src/example_02/: CMakeLists.txt  README.md  callbacks.cc  callbacks.h  dump_utils.cc  dump_utils.h  main.cc  webgpu_helpers.cc  webgpu_helpers.h
src/example_03/: CMakeLists.txt  README.md  callbacks.cc  callbacks.h  dump_utils.cc  dump_utils.h  main.cc  webgpu_helpers.cc  webgpu_helpers.h  wgpu.h
src/example_04/: CMakeLists.txt  README.md  callbacks.cc  callbacks.h  dump_utils.cc  dump_utils.h  main.cc  mat4.cc  mat4.h  vec3.h  webgpu_helpers.cc  webgpu_helpers.h
src/example_05/: CMakeLists.txt  README.md  callbacks.cc  callbacks.h  dump_utils.cc  dump_utils.h  main.cc  mat4.cc  mat4.h  webgpu_helpers.cc  webgpu_helpers.h  wgpu.h
src/example_06/: CMakeLists.txt  README.md  args.cc  args.h  args_test.cc  callbacks.cc  callbacks.h  float_eq.cc  float_eq.h  main.cc  mat4.cc  mat4.h  obj_parser.cc  obj_parser.h  obj_parser_test.cc  ostream_helper.cc  ostream_helper.h  vec3.h  vec4.h  webgpu_helpers.cc  webgpu_helpers.h
tools/: roll-deps
